--- a/richplay/.classpath
+++ b/richplay/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/httpcore-4.2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/httpmime-4.2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/locSDK_3.3.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
